[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
serde_json = "1.0"
bincode = "1.3"
k256 = { version = "0.13", features = ["ecdsa", "rand-std"] } # Criptografia de curva elíptica
ecdsa = { version = "0.14", features = ["der"] } # Para assinar e verificar com ECDSA (necessário para o traço Signer/Verifier)
rand = "0.8" # Gerador de números aleatórios
sha2 = "0.10" # Para hashing das mensagens antes da assinatura
